# cuda-forge

./: .clang-format  .gitignore  CMakeLists.txt
benchmark/: elementwise.py
csrc/: main.cu
csrc/core/: common.h  context.h  launcher.h  transfer.h
csrc/kernels/elementwise/: adds.cu  adds.cuh  adds_wrapper.cuh
csrc/torch/: binding.cpp
include/: basic_matrix_mul.cuh  cuda_utils.h  matrix_ops.h  tiled_matrix_mul.cuh  vector_add.cuh
src/: basic_matrix_mul.cuh  benchmark.h  main.cpp  main.cu  tiled_matrix_mul.cu  tiled_matrix_mul.cuh  vector_add.cu
src/core/: common.h  memory.h  timer.h
src/kernels/elementwise/: adds.cu  adds.cuh  test.h
src/kernels/histogram/: histogram.cu  histogram.cuh  test.h
src/kernels/reduction/: sum.cu  sum.cuh  test.h
src/kernels/scan/: scan.cu  scan.cuh  test.h
src/torch/: binding.cu
